--- a/test/dummy/app/views/static/index.html.erb
+++ b/test/dummy/app/views/static/index.html.erb
@@ -476,3 +476,126 @@
         </p>
     </div>
 </div>
+
+<hr />
+
+<div class="row">
+    <div class="col-sm mt-3 mb-3">
+        <%= nav_helper do |nav| %>
+            <%= nav.item(:item1) { "Item 1" } %>
+            <%= nav.item(:item2) { "Item 2" } %>
+            <%= nav.item(:item3) { "Item 3" } %>
+            <%= nav.item :item4 %>
+        <% end %>
+    </div>
+</div>
+
+<hr>
+
+<div class="row">
+    <div class="col-sm mt-3 mb-3">
+
+        <%= dropdown_helper :group do |dropdown| %>
+            <%= dropdown.button(:primary) { "Action" } %>
+            <%= dropdown.menu do |menu| %>
+                <%= menu.link 'Edit', '#' %>
+                <%= menu.link 'Delete', '#' %>
+            <% end %>
+        <% end %>
+
+        <%= dropdown_helper :group, class: 'dropright' do |dropdown| %>
+            <button type="button" class="btn btn-danger">Action 2</button>
+            <%= dropdown.button(:danger, split: true) %>
+            <%= dropdown.menu do |menu| %>
+                <%= menu.header "Crud operations" %>
+                <%= menu.divider %>
+                <%= menu.link 'Edit', '#' %>
+                <%= menu.link 'Delete', '#' %>
+            <% end %>
+        <% end %>
+    </div>
+</div>
+
+<hr />
+
+<div class="row">
+    <div class="col-sm mt-3 mb-3">
+        <%= dropdown_helper do |dropdown| %>
+            <%= dropdown.button :primary do %>
+                Login
+            <% end %>
+            <%= dropdown.menu do |menu| %>
+                <form class="px-4 py-3">
+                    <div class="form-group">
+                        <label for="exampleDropdownFormEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleDropdownFormPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                            <label class="form-check-label" for="dropdownCheck">
+                                Remember me
+                            </label>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                </form>
+                <%= menu.divider %>
+                <%= menu.link "New around here? Sign up", "#" %>
+                <%= menu.link "Forgot password", "#" %>
+            <% end %>
+        <% end %>
+    </div>
+</div>
+
+<hr />
+
+<div class="row">
+    <div class="col-sm mt-3 mb-3">
+        <%= tab_helper do |tab| %>
+            <%= tab.nav do |nav| %>
+                <%= nav.item :item1 do %>
+                    Item 1
+                <% end %>
+                <%= nav.item(:item2, class: 'active') { "Item 2" } %>
+                <%= nav.item(:item3) { "Item 3" } %>
+                <%= nav.item :item4 %>
+                <%= nav.dropdown 'More' do |dropdown| %>
+                    <%= dropdown.item :item5 %>
+                    <%= dropdown.item(:item6) { 'Item 6' } %>
+                <% end %>
+            <% end %>
+
+            <%= tab.content do |content| %>
+                <%= content.pane :item1, class: 'mt-3' do %>
+                    Content 1
+                <% end %>
+
+                <%= content.pane :item2, class: 'active mt-3' do %>
+                    Content 2
+                <% end %>
+
+                <%= content.pane :item3, class: 'mt-3' do %>
+                    Content 3
+                <% end %>
+
+                <%= content.pane :item4, class: 'mt-3' do %>
+                    Content 4
+                <% end %>
+
+                <%= content.pane :item5, class: 'mt-3' do %>
+                    Content 5
+                <% end %>
+
+                <%= content.pane :item6, class: 'mt-3' do %>
+                    Content 6
+                <% end %>
+            <% end %>
+        <% end %>
+    </div>
+</div>
+
