Cleaning up code base

--- a/test/dummy/app/views/static/index.html.erb
+++ b/test/dummy/app/views/static/index.html.erb
@@ -500,6 +500,7 @@
             <%= dropdown.menu do |menu| %>
                 <%= menu.link 'Edit', '#' %>
                 <%= menu.link 'Delete', '#' %>
+                <%= menu.text 'Static text' %>
             <% end %>
         <% end %>
 
