Working on config settings

--- a/test/dummy/app/views/static/index.html.erb
+++ b/test/dummy/app/views/static/index.html.erb
@@ -217,6 +217,11 @@
                         <% end %>
                     </ul>
                 <% end %>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul>
                 <%= c.footer do %>
                     This is the footer...
                 <% end %>
