--- a/test/dummy/app/views/static/index.html.erb
+++ b/test/dummy/app/views/static/index.html.erb
@@ -1,3 +1,7 @@
+<%= page_header_helper class: 'mt-5' do %>
+    Test Application
+<% end %>
+
 <div class="row">
     <div class="col-sm mt-3 mb-3">
         <p>This is the sample page for testing the library</p>
